packages/html/src/define/base.css
video-player {
  display: contents;
}

/*
Required to override any default video styles (such as Tailwind's CSS reset)
and ensure the video element fills the container as expected.
*/
video-player video {
  display: block;
  width: 100%;
  height: 100%;
}

video-player video::-webkit-media-text-track-container {
  transition: translate var(--media-caption-track-duration, 0) ease-out;
  transition-delay: var(--media-caption-track-delay, 0);
  translate: 0 var(--media-caption-track-y, 0);
  scale: 0.98;
  z-index: 1;
  font-family: inherit;
}

